--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-web-site.com",
+  "name": "react-optimization-sandbox",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
